--- a/wiki/GamePanelLayout.wiki
+++ b/wiki/GamePanelLayout.wiki
@@ -1,5 +1,5 @@
+#summary 游戏布局介绍
 #labels Phase-Design
-#游戏布局介绍
 
 
 http://img181.poco.cn/mypoco/myphoto/20110517/15/568035332011051715363804_640.jpg
